EDU-356 Fix overflow issue with progress percentage and use pretty-bytes for formatting

--- a/src/components/pages/my-space.less
+++ b/src/components/pages/my-space.less
@@ -3,6 +3,11 @@
 }
 
 .MySpacePage-usedStorage {
-  display: block;
+  display: flex;
+  align-items: baseline;
   margin-top: 20px;
+}
+
+.MySpacePage-usedStorageLabel {
+  margin-right: 15px;
 }
