--- a/src/components/used-storage.less
+++ b/src/components/used-storage.less
@@ -1,12 +1,19 @@
 .UsedStorage {
+  width: 100%;
   margin: 10px 0;
 }
 
-.UserStorage-progress {
-  padding: 0 5px;
+.UsedStorage-progress {
+  margin: 10px 0;
+  display: flex;
 }
 
-.UsedStorage-value {
+.UserStorage-progressPercentage {
+  padding-left: 10px;
+  flex-shrink: 0;
+}
+
+.UsedStorage-occupiedSpace {
   font-size: 10px;
   display: flex;
   justify-content: flex-end;
